syntax = "proto3";

package rpc;

service LogicRPC {
    rpc Login (LoginReq) returns (LoginRes) {}
    rpc Ping (PingReq) returns (PingRes) {}
    rpc SendP2PMsg (SendP2PMsgReq) returns (SendP2PMsgRes) {}
}

message LoginReq {
    int64  UID    = 1;
    string token  = 2;
}

message LoginRes {
    uint32 errCode = 1;
    string errStr  = 2;
}

message PingReq {
    int64  UID    = 1;
}

message PingRes {
    uint32 errCode = 1;
    string errStr  = 2;
}

message SendP2PMsgReq {
    int64  sourceUID = 1;
    int64  targetUID = 2;
    string msg       = 3;
}

message SendP2PMsgRes {
    uint32 errCode = 1;
    string errStr  = 2;
}

